--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -8,12 +8,29 @@ pt-BR:
         delimiter: "."
         precision: 2
 
+  date:
+    formats:
+      default: "%d/%m/%Y"
+      short: "%d/%m"
+      long: "%d de %B de %Y"
+  time:
+    formats:
+      default: "%d/%m/%Y %H:%M"
+      short: "%d/%m %H:%M"
+      long: "%d de %B de %Y às %H:%M"
+  datetime:
+    distance_in_words:
+      about_x_hours:
+        one: "cerca de 1 hora"
+        other: "cerca de %{count} horas"
+
   activerecord:
     models:
       company: 'Empresa'
       travel: 'Viagem'
       vehicle: 'Veículo'
       user: 'Usuário'
+      cost: 'Custo'
 
     attributes:
       company:
@@ -32,3 +49,6 @@ pt-BR:
         email: 'Email'
         password: 'Senha'
         password_confirmation: 'Senha (confirmação)'
+      cost:
+        value: 'Valor'
+        cost_type_id: 'Tipo de Custo'
